--- a/styles/_mediaqueries.scss
+++ b/styles/_mediaqueries.scss
@@ -3,7 +3,7 @@
         max-width: 1440px;
 
         header {
-            //height: 90px;
+            max-width: 1440px;
 
             nav {
                 flex-direction: row;
@@ -23,17 +23,17 @@
                     }
                 }
 
-                #menu {
+                .menu {
                     width: 100%;
                     height: 90px;
                     //background: yellow;
                     //border: solid;
 
+                    
                     display: flex;
 
                     ul {
                         width: 50%;
-                        text-decoration: none;
                         margin: auto;
                         //border: solid;
                         
@@ -42,12 +42,15 @@
                         justify-content: space-around;
     
                         li {
-                            list-style: none;
-                            text-align: center;
+                            width: unset;
+                            background: unset;
     
-                            display: flex;
                             flex-direction: row;
                             align-items: center;
+
+                            &:last-child {
+                                padding-bottom: 0;
+                            }
     
                             a {
                                 color: $colorPrimary;
@@ -59,15 +62,21 @@
                                 text-align: center;
                                 text-decoration: none;
                             }
+
+                            span {
+                                display: none;
+                            }
                         }
 
                         img {
-                            border: 1px solid $colorPrimary;
-                            border-radius: 50%;
-                            padding: 20px;
+                            //border: 1px solid $colorPrimary;
+                            //border-radius: 50%;
+                            //padding: 20px;
+
+                            display: block;
 
                             &:hover {
-                                background: $colorPrimary;
+                                //background: $colorPrimary;
                                 //filter: invert(4.4) hue-rotate(1deg) saturate(1%);
                                 cursor: pointer;
                             }
@@ -75,6 +84,9 @@
                     }
     
                     &.dark {
+                        display: flex;
+                        margin: 16px auto;
+
                         li {
                             background: $bgDark;
 
@@ -130,13 +142,57 @@
                 p {
                     font-size: 16px;
                     margin-top: 7px;
-                    margin-bottom: 95px;
+                    margin-bottom: 37px;
+                }
+
+                #group-results {
+                    #span {
+                        width: 338px;
+                        margin-top: 58px;
+                    }
+
+                    #title {
+                        //display: none;
+                        margin: 55px 0 82px;
+                        font-size: 35px;
+                        line-height: 30px;
+                    }
+
+                    .not {
+                        //border: solid;
+    
+                        .notResults {
+                            margin: 27px 0 29px;
+                            //margin-bottom: 29px;
+                        }
+    
+                        #notResults {
+                            font-family: 'Montserrat', sans-serif;
+                            font-size: 22px;
+                            color: $colorSecundary;
+                            text-align: center;
+                            line-height: 25px;
+                            margin-top: 29px;
+                            margin-bottom: 112px;
+                        }
+                    }
+
+                    .results {
+                        margin: 0 157px;
+                        //background: red;
+    
+                        grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
+                        gap: 29px 29px;
+
+                        .gif {
+                            width: 260px;
+                            height: 200px;
+                        }
+                    }
                 }
             }
 
             #trending {
-                height: 640px;
-
                 h2 {
                     padding-top: 67px;
                 }
@@ -148,27 +204,156 @@
                 }
 
                 .content {
-                    width: 90%;
+                    position: relative;
                     margin: auto;
-                    justify-content: space-around;
+                    justify-content: center;
+                    align-items: center;
                     overflow: hidden;
+                    //border: $borde;
 
-                    .gif {
-                        width: 357px;
-                        height: 275px;
-                        border: $borde;
-                        margin: 53px 157px 182px;
+                    #prev, #next {
+                        width: 40px;
+                        height: 40px;
+                        //padding: 7px;
+                        display: block;
+                        //border: 1px solid $colorPrimary;
                         
-    
-                        img {
-                            width: 357px;
-                            height: 275px;
+                        &:hover {
+                            background: $colorPrimary;
+                            cursor: pointer;
                         }
                     }
-                }
+
+                    ul {
+                        li {
+                            /* display: none;
+
+                            &:first-child {
+                                display: block;
+                            } */
+
+                            .gif {
+                                width: 357px;
+                                height: 275px;
+                                position: relative;
+                                
+                                //border: $borde;
+                                margin-top: 53px;
+
+                                .over {
+                                    width: 0;
+                                    height: 0;
+                                    position: absolute;
+                                    //overflow: hidden;
+                                    left: 0;
+                                    bottom: 0;
+                                    background: rgba($colorPrimary, 0.7);
+                                               
+                                    display: flex;
+                                    flex-direction: column;
+                                    justify-content: space-between;;
+                
+                                    .buttonGif {
+                                        display: none;
+                                        margin: 10px 10px 0 0;
+                                        //border: 1px solid;
+                            
+                                        .icon {
+                                            width: 32px;
+                                            height: 32px;
+                                            background: $bgOne;
+                                            border-radius: 6px;
+                                            opacity: 0.7;
+                                            padding: 7px;
+                                                
+                                            &:hover {
+                                                opacity: 1;
+                                            }
+                                        }
+                
+                                        #fav {
+                                            &:hover {
+                                                opacity: 1;
+                                                //content: url(./assets/icons/icon-fav-active.svg);
+                                            }
+                                        }
+                                    }
+                            
+                                    .infoGif {
+                                        display: none;
+                                        margin: 0 0 30px 13px;
+                                        //border: $borde;
+                            
+                                        #user {
+                                            font-family: 'Roboto', sans-serif;
+                                            font-size: 16px;
+                                            line-height: 19px;
+                                            color: $bgOne;
+                                            text-align: left;
+                                        }
+                            
+                                        #hover-title {
+                                            font-family: 'Roboto', sans-serif;
+                                            font-weight: bold;
+                                            color: $bgOne;
+                                            font-size: 16px;
+                                            line-height: 19px;
+                                            text-align: left;
+                                            margin-top: 5px;
+                                        }
+                                    }
+                                } 
+
+                                &:hover {
+                                    .over {
+                                        width: 100%;
+                                        height: 100%;
+                                        cursor: pointer;
+                                        //border: solid;
+
+                                        .buttonGif {
+                                            display: block;
+                                            align-self: flex-end;
+                                        }
+        
+                                        .infoGif {
+                                            display: block;
+                                            //align-self: flex-start;
+                                            justify-self: self-end;
+                                            bottom: 0;
+                                        }
+                                    }
+                                } 
+                            } 
+                        } 
+                    }
+
+                    .fullOver {
+                        background: $bgOne;
+                        align-items: center;
+                        justify-content: center;
+                        
+                        a {
+                            margin-top: 66px;
+                            margin-right: 278px;
+                        }
+
+                        #fullImg {
+                            width: 695px;
+                            height: 385px;
+                            margin-top: 160px;
+                        }
+
+                        #base {
+                            //border: solid;
+                            width: 695px;
+                            margin-top: 27px;
+                        }
+                    }
+                }    
             }
         }
-
+        
         footer {
             height: 116px;
 
